<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_pelicules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pr_idi.mydatabaseexample.activity.EditPeliculesActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_pelicules"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:menu="@menu/toolbar_edit_pelicules_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="201dp"
                    android:src="@drawable/ic_foto"
                    android:id="@+id/iv_actvityeditpelicules_foto"
                    android:layout_marginTop="11dp"
                    android:elevation="6dp" />

                <Button
                    android:text="@string/imatge_per_defecte_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_actvityeditpelicules_def"
                    android:layout_weight="1"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    tools:text="Imgatge per defecte" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:text="@string/titol"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_weight="0.5"
                        tools:text="Títol:"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/et_actvityeditpelicules_titol"
                            android:layout_weight="1"
                            android:hint="@string/hint_title"
                            android:textAlignment="textEnd"
                            android:inputType="textCapWords|textPersonName" />

                        <TextView
                            android:text="@string/err_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/error_titol"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.Design.Error"
                            android:textAlignment="textEnd"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:text="@string/director"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords|textPersonName"
                            android:ems="10"
                            android:id="@+id/et_actvityeditpelicules_director"
                            android:hint="@string/hint_director"
                            android:textAlignment="textEnd"
                            android:layout_weight="1" />

                        <TextView
                            android:text="@string/err_director"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/error_director"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.Design.Error"
                            android:textAlignment="textEnd"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:text="@string/any_d_estrena"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/et_actvityeditpelicules_any"
                            android:layout_weight="1"
                            android:hint="@string/hint_year"
                            android:inputType="number"
                            android:textAlignment="textEnd"
                            android:maxLines="1" />

                        <TextView
                            android:text="@string/err_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/error_any"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.Design.Error"
                            android:textAlignment="textEnd"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:text="@string/pais"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords|textPersonName"
                            android:ems="10"
                            android:id="@+id/et_actvityeditpelicules_pais"
                            android:layout_weight="1"
                            android:hint="@string/hint_country"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:text="@string/err_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/error_pais"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.Design.Error"
                            android:textAlignment="textEnd"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:text="@string/protagonista"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords|textPersonName"
                            android:ems="10"
                            android:id="@+id/et_actvityeditpelicules_protagonista"
                            android:layout_weight="1"
                            android:hint="@string/hint_main_character"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:text="@string/err_protagonist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/error_protagonista"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.Design.Error"
                            android:textAlignment="textEnd"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
